--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.68MB/s(Youtube:不良林), server: 107.173.148.4, port: 29101, type: vmess, uuid: d9b33a06-a185-402d-e8f5-f1983f57a9b1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 107.173.148.4}}
-  - {name: 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
-  - {name: 波兰-1.18MB/s(Youtube:不良林), server: 217.30.10.64, port: 9093, type: ss, cipher: aes-256-cfb, password: wfLC2y7rzZyCmuyt}
-  - {name: 🇨🇳 中国-340.1KB/s(Youtube:不良林), server: ingress-i2.onebox6.org, port: 38101, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i2.onebox6.org}}
-  - {name: 波兰-513.8KB/s(Youtube:不良林), server: 217.30.10.64, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇺🇸 美国-281.0KB/s(Youtube:不良林), server: living.starspace.link, port: 443, type: trojan, password: NNhSlVRhte1Vzw5D, sni: living.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.22MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-613.5KB/s(Youtube:不良林), server: jgwhdlb3.gaox.ml, port: 443, type: trojan, password: 006baa3f-4bc3-4915-b60d-c8c5dae11a11, sni: jgwhdlb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.28MB/s(Youtube:不良林), server: fhcarm1.gaox.ml, port: 443, type: trojan, password: 05742120-ce23-4cc8-88f5-6d221ce45bf4, sni: fhcarm1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-219.0KB/s(Youtube:不良林), server: 104.128.190.115, port: 44771, type: vmess, uuid: a4aa83d4-db1c-42a6-844d-135d6635b463, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 波兰-841.8KB/s(Youtube:不良林), server: 217.30.10.64, port: 9027, type: ss, cipher: aes-256-cfb, password: EXN3S3eQpjE7EJu8}
+  - {name: 以色列-5.79MB/s(Youtube:不良林), server: ru1.lolvps.xyz, port: 40040, type: vmess, uuid: 2b8e4fc6-0112-4b26-8c17-1bfef9a3ff99, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /6129CFHR, ws-headers: {Host: ru1.lolvps.xyz}}
+  - {name: 波兰-894.5KB/s(Youtube:不良林), server: 217.30.10.64, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 🇬🇧 英国-2.85MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 保加利亚-313.7KB/s(Youtube:不良林), server: 213.183.63.218, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇺🇸 美国-2.60MB/s(Youtube:不良林), server: v4.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v4.ssrsub.com}}
+  - {name: 未知国家-3.00MB/s(Youtube:不良林), server: v5.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v5.ssrsub.com}}
+  - {name: 未知国家-5.48MB/s(Youtube:不良林), server: vfly9.win, port: 443, type: vmess, uuid: 825136bb-fc0a-4f43-8307-dc2e36f27e2d, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /myblog, ws-headers: {Host: vfly9.win}}
+  - {name: 🇺🇸 美国-239.0KB/s(Youtube:不良林), server: living.starspace.link, port: 443, type: trojan, password: NNhSlVRhte1Vzw5D, sni: living.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.26MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
-      - 波兰-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
-      - 波兰-513.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 🇮🇳 印度-613.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-219.0KB/s(Youtube:不良林)
+      - 波兰-841.8KB/s(Youtube:不良林)
+      - 以色列-5.79MB/s(Youtube:不良林)
+      - 波兰-894.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
+      - 保加利亚-313.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 未知国家-3.00MB/s(Youtube:不良林)
+      - 未知国家-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
-      - 波兰-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
-      - 波兰-513.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 🇮🇳 印度-613.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-219.0KB/s(Youtube:不良林)
+      - 波兰-841.8KB/s(Youtube:不良林)
+      - 以色列-5.79MB/s(Youtube:不良林)
+      - 波兰-894.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
+      - 保加利亚-313.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 未知国家-3.00MB/s(Youtube:不良林)
+      - 未知国家-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
-      - 波兰-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
-      - 波兰-513.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 🇮🇳 印度-613.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-219.0KB/s(Youtube:不良林)
+      - 波兰-841.8KB/s(Youtube:不良林)
+      - 以色列-5.79MB/s(Youtube:不良林)
+      - 波兰-894.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
+      - 保加利亚-313.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 未知国家-3.00MB/s(Youtube:不良林)
+      - 未知国家-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
-      - 波兰-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
-      - 波兰-513.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 🇮🇳 印度-613.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-219.0KB/s(Youtube:不良林)
+      - 波兰-841.8KB/s(Youtube:不良林)
+      - 以色列-5.79MB/s(Youtube:不良林)
+      - 波兰-894.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
+      - 保加利亚-313.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 未知国家-3.00MB/s(Youtube:不良林)
+      - 未知国家-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
-      - 波兰-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
-      - 波兰-513.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 🇮🇳 印度-613.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-219.0KB/s(Youtube:不良林)
+      - 波兰-841.8KB/s(Youtube:不良林)
+      - 以色列-5.79MB/s(Youtube:不良林)
+      - 波兰-894.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
+      - 保加利亚-313.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 未知国家-3.00MB/s(Youtube:不良林)
+      - 未知国家-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
-      - 波兰-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
-      - 波兰-513.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 🇮🇳 印度-613.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-219.0KB/s(Youtube:不良林)
+      - 波兰-841.8KB/s(Youtube:不良林)
+      - 以色列-5.79MB/s(Youtube:不良林)
+      - 波兰-894.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
+      - 保加利亚-313.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 未知国家-3.00MB/s(Youtube:不良林)
+      - 未知国家-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.68MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.25MB/s(Youtube:不良林)
-      - 波兰-1.18MB/s(Youtube:不良林)
-      - 🇨🇳 中国-340.1KB/s(Youtube:不良林)
-      - 波兰-513.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-281.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.22MB/s(Youtube:不良林)
-      - 🇮🇳 印度-613.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.28MB/s(Youtube:不良林)
-      - 🇬🇧 英国-219.0KB/s(Youtube:不良林)
+      - 波兰-841.8KB/s(Youtube:不良林)
+      - 以色列-5.79MB/s(Youtube:不良林)
+      - 波兰-894.5KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.85MB/s(Youtube:不良林)
+      - 保加利亚-313.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 未知国家-3.00MB/s(Youtube:不良林)
+      - 未知国家-5.48MB/s(Youtube:不良林)
+      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
