--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇳🇱 荷兰-951.3KB/s(Youtube:不良林), server: 213.183.59.211, port: 9018, type: ss, cipher: aes-256-cfb, password: fG2artUmHfNT2cX7}
+  - {name: 🇩🇪 德国-1.25MB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: c0276440-f163-4f40-a08c-78b158ce6c4f, sni: s4.upyun.online, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-224.2KB/s(Youtube:不良林), server: s3.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s3.upyun.online, skip-cert-verify: true}
   - {name: 🇳🇱 荷兰-258.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇳🇱 荷兰-261.2KB/s(Youtube:不良林), server: 213.183.59.206, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 🇷🇺 俄罗斯联邦-2.52MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 以色列-5.79MB/s(Youtube:不良林), server: ru1.lolvps.xyz, port: 40040, type: vmess, uuid: 2b8e4fc6-0112-4b26-8c17-1bfef9a3ff99, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /6129CFHR, ws-headers: {Host: ru1.lolvps.xyz}}
-  - {name: 🇺🇸 美国-451.9KB/s(Youtube:不良林), server: s1.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s1.upyun.online, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-239.0KB/s(Youtube:不良林), server: living.starspace.link, port: 443, type: trojan, password: NNhSlVRhte1Vzw5D, sni: living.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.26MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-542.4KB/s(Youtube:不良林), server: 213.183.59.211, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
-  - {name: 🇳🇱 荷兰-1.70MB/s(Youtube:不良林), server: 213.183.59.211, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇳🇱 荷兰-544.8KB/s(Youtube:不良林), server: 213.183.59.211, port: 9060, type: ss, cipher: aes-256-cfb, password: ueLXVkvh4hckhErQ}
+  - {name: 🇺🇸 美国-273.1KB/s(Youtube:不良林), server: 20.24.227.29, port: 8313, type: ss, cipher: chacha20-ietf-poly1305, password: ljqdalu13..}
+  - {name: 🇨🇳 台湾-2.52MB/s(Youtube:不良林), server: 330tw.fans8.xyz, port: 443, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 330tw.fans8.xyz}}
+  - {name: 🇨🇳 中国-5.05MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-368.7KB/s(Youtube:不良林), server: zzcm09.bdate.xyz, port: 1980, type: vmess, uuid: b9ecdb44-236b-30a7-94f2-f464993d84cf, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: zzcm09.bdate.xyz}}
+  - {name: 🇬🇧 英国-2.89MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1016.0KB/s(Youtube:不良林), server: jgwcc1.gaox.ml, port: 443, type: trojan, password: 7118b5f4-0ea4-4c11-be7f-11471cb91e4a, sni: jgwcc1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇳🇱 荷兰-951.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-224.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-258.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-261.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.52MB/s(Youtube:不良林)
-      - 以色列-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-542.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-544.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-273.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1016.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇳🇱 荷兰-951.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-224.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-258.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-261.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.52MB/s(Youtube:不良林)
-      - 以色列-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-542.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-544.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-273.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1016.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇳🇱 荷兰-951.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-224.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-258.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-261.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.52MB/s(Youtube:不良林)
-      - 以色列-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-542.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-544.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-273.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1016.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-2.52MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇳🇱 荷兰-951.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-224.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-258.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-261.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.52MB/s(Youtube:不良林)
-      - 以色列-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-542.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-544.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-273.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1016.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇳🇱 荷兰-951.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-224.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-258.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-261.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.52MB/s(Youtube:不良林)
-      - 以色列-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-542.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-544.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-273.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1016.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇳🇱 荷兰-951.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-224.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-258.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-261.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.52MB/s(Youtube:不良林)
-      - 以色列-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-542.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-544.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-273.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1016.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇳🇱 荷兰-951.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-224.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-258.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-261.2KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.52MB/s(Youtube:不良林)
-      - 以色列-5.79MB/s(Youtube:不良林)
-      - 🇺🇸 美国-451.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-239.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.26MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-542.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.70MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-544.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-273.1KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-2.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-368.7KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.89MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1016.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
